# dinap-rel-note

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: docker-image.yml
direco/: CMakeLists.txt  Generator.cpp  main.cpp
direco/handlers/: ContentTable.cpp  ContentTable.h  File.h  Image.cpp  Variable.cpp  Variable.h
direco/public/: Generator.h  Section.h
docker/: Dockerfile  config.yml
example/configs/: DinapRelNote-1.0.0.yml
example/files/: T-0002.html  T-1235.md
example/templates/: github.css  header.html  styles.css
server/: Builder.cpp  Builder.h  CMakeLists.txt  Server.cpp  Server.h  Url.cpp  Url.h  WebsocketCtrl.cpp  WebsocketCtrl.h  config.yml  main.cpp
src/: CMakeLists.txt  Generator.cpp  Generator.h  main.cpp
src/handlers/: ContentTable.cpp  File.cpp  Image.cpp  Image.h  References.cpp  References.h  Utils.cpp  Utils.h
